--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,10 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# n8n
+n8n/storage/
+n8n/*.log
+n8n/*.sqlite-journal
+n8n/.n8n-config.json
+n8n/keys.json
